HTTP GET request core updated